--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.data.mongodb.host=localhost:27017
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=school
 spring.data.mongodb.authentication-database = admin
+logging.level.org.springframework.data.mongodb.repository.query= debug
